tests/traci/set_variable/Vehicle/ChangeLane/InvalidLaneId/testclient_out.traci
TraCITestClient output file. Date: Sun Aug 11 18:19:40 2019


-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SetValue>:
  domID=196 varID=19 objID=veh0
.. Answered with error to command (196), [description: No lane with index '100' on road '1fi'.]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
